set(CPPTABLE_EXE_NAME example CACHE INTERNAL "Name of the executable")

set(
    ${CPPTABLE_EXE_NAME}_SOURCES
    src/main.cpp
)

add_executable(${CPPTABLE_EXE_NAME} ${${CPPTABLE_EXE_NAME}_SOURCES})

target_link_libraries(
    ${CPPTABLE_EXE_NAME}
PUBLIC
    ${PROJECT_NAME}::${CPPTABLE_LIB_NAME}
)

target_compile_options(
    ${CPPTABLE_EXE_NAME}
PRIVATE
    ${CPPTABLE_WARNING_FLAGS}
)

set_target_properties(
    ${CPPTABLE_EXE_NAME}
    PROPERTIES VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}"
)

install(
    TARGETS ${CPPTABLE_EXE_NAME}
    OPTIONAL
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
